Fix Titlebar Bubbles & Fix List Line Alignment + Add Undo Sourcemode Styling Fix Nav Header button color Adjust Metadata styling Fix heatmap plugin styling

--- a/SCSS/Theme Rewrite/_style-settings.scss
+++ b/SCSS/Theme Rewrite/_style-settings.scss
@@ -545,6 +545,11 @@ settings:
         description: Minimalistic/distraction free layout design for notes.
         id: writing
         type: class-toggle
+    - 
+        title: Disable Source View Styling
+        description: Undo sizing/style fixes to make source view look more like plain text
+        id: disable-source-styling
+        type: class-toggle
     -
         title: Text
         id: ITS-Text
