--- a/SCSS/Theme Rewrite/base/_lists.scss
+++ b/SCSS/Theme Rewrite/base/_lists.scss
@@ -35,9 +35,11 @@
     
     --indentation-guide-color: var(--lines);
     --indentation-guide-width: 2px;
+    --indentation-guide-width-active: var(--indentation-guide-width);
     --indentation-guide-color-active: var(--accent);
-    --indentation-guide-editing-indent: 2px;
-    --indentation-guide-lp-indent: calc(var(--checkbox-size) / 3);
+    --indentation-guide-source-indent: calc(var(--checkbox-size) / 3 * -1 + (var(--checkbox-size) / 2.5));
+    --indentation-guide-editing-indent: calc(var(--checkbox-size) / 3);
+    --indentation-guide-reading-indent: calc(var(--checkbox-size) / 3 * -1 - 2px);
     
     --list-color-1: var(--indentation-guide-color);
     --list-color-2: var(--indentation-guide-color);
@@ -119,9 +121,9 @@ ul > li.task-list-item.task-list-item .task-list-item-checkbox
             // margin-left: -5px;
         }
     }
-    //Indent Line
+    // Indent Line
     & .cm-hmd-list-indent .cm-indent::before 
-    { transform: translateX(var(--indentation-guide-lp-indent)); }
+    { transform: translateX(var(--indentation-guide-editing-indent)); }
 
     //Checkboxes
     & .task-list-label { 
@@ -134,7 +136,7 @@ ul > li.task-list-item.task-list-item .task-list-item-checkbox
 
 //Indentation Line
 .markdown-rendered.show-indentation-guide li > :is(ul, ol)::before {
-    left: calc( var(--checkbox-size) * -1 + 1px);
+    transform: translateX(var(--indentation-guide-reading-indent));
 }
 
 
